@@ -1,0 +1,7 @@
+# This file was generated by Rcpp::compileAttributes
+# Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
+
+colNorm <- function(NM) {
+    .Call('RcppGSLExample_colNorm', PACKAGE = 'RcppGSLExample', NM)
+}
+
