@@ -1,0 +1,19 @@
+// This file was generated by Rcpp::compileAttributes
+// Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
+
+#include <RcppGSL.h>
+#include <Rcpp.h>
+
+using namespace Rcpp;
+
+// colNorm
+Rcpp::NumericVector colNorm(Rcpp::NumericMatrix NM);
+RcppExport SEXP RcppGSLExample_colNorm(SEXP NMSEXP) {
+BEGIN_RCPP
+    Rcpp::RObject __result;
+    Rcpp::RNGScope __rngScope;
+    Rcpp::traits::input_parameter< Rcpp::NumericMatrix >::type NM(NMSEXP);
+    __result = Rcpp::wrap(colNorm(NM));
+    return __result;
+END_RCPP
+}
